<resources>
    <string name="app_name">MyWallet</string>
    <string name="settings">Настройки</string>
    <string name="about">О программе</string>
    <string name="changeTheme">Сменить тему</string>
    <string name="helloMessage">Здравствуй,\u0020</string>
    <string name="changeYouName">Имя пользователя</string>
    <string name="userName">Введите новое имя пользователя</string>
    <string name="myWalletTitle">Мой кошелёк</string>
    <string name="settingsTitle">Настройки</string>
    <string name="aboutTitle">О программе</string>
    <string name="OK">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="author">Владимир Владимирович</string>
    <string name="authorLabel">Автор:</string>
    <string name="version">1.0</string>
    <string name="versionLabel">Версия:</string>
    <string name="authorNickname">ClassZak</string>
    <string name="authorNicknameLabel">Никнейм автора:</string>
    <string name="changeToLightTheme">Сменить тему на светлую</string>
    <string name="changeToDarkTheme">Сменить тему на тёмную</string>
    <string name="monthBalanceLabel">Остаток на текущий месяц: </string>
    <string name="previousMonthBalanceLabel">Остаток на предыдущий месяц: </string>
    <string name="history">История операций</string>
    <string name="balancesTypes">Типы счетов</string>
    <string name="balances">Счета</string>
    <string name="operationTypes">Типы операций</string>
    <string name="addOperationType">Добавить тип операции</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>