<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title=""
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/settingsMenuItem"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/aboutMenuItem"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
            <item
                android:id="@+id/changeThemeMenuItem"
                android:title="@string/changeTheme" />
        </menu>
    </item>
</menu>